[metadata]
name = dalpy
version = 1.0.0
author = Eitan Joseph and Chami Lamelas
author_email = eitanjoseph@brandeis.edu, slamelas@brandeis.edu
description = A Python module for administering and grading assignments in data structures and algorithms courses.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DALPy-Developers/DALPy
project_urls =
    Source Code = https://github.com/DALPy-Developers/DALPy
    Documentation = https://github.com/DALPy-Developers/DALPy
    Bug Tracker = https://github.com/DALPy-Developers/DALPy/issues
    Sample Usage = https://github.com/DALPy-Developers/DALPy-Sample-Problems
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src