[metadata]
name = cormen_lib
version = 1.1.1
author = Eitan Joseph and Chami Lamelas
author_email = eitanjoseph@brandeis.edu, slamelas@brandeis.edu
description = A data structures and algorithms library based on Introduction to Algorithms Third Edition by Thomas H. Cormen.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DALPy-Developers/DALPy
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = ['DALPy']

[options.packages.find]
where = src