[metadata]
name = dalpy
version = 1.0.1
author = Eitan Joseph and Chami Lamelas
author_email = eitanjoseph@brandeis.edu, slamelas@brandeis.edu
description = A Python package for learning data structures and algorithms.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DALPy-Developers/DALPy
project_urls =
    Source Code = https://github.com/DALPy-Developers/DALPy
    Documentation = https://dalpy-developers.github.io/DALPy/
    Bug Tracker = https://github.com/DALPy-Developers/DALPy/issues
    Sample Usage = https://github.com/DALPy-Developers/DALPy-Sample-Problems
    Article = https://www.thejustice.org/article/2022/04/a-software-called-dalpy-was-created-by-two-undergraduate-students-and-will-assist-teaching-testing-and-grading-at-the-university-brandeis
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
